# spt

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  LangLexer.g4  LangParser.g4  README.md  _commit_msg.txt  bench_astar.spt  bench_daily.spt  bench_fib.spt  bench_full.spt  change.md  count_lines.py  gen.sh  test_jit_temp.spt
new_spt/: BENCHMARKS.md  CMakeLists.txt  Makefile  README.md
new_spt/bench/: bench_lua.lua  bench_spt.c  fib.lua  fib.spt  floatloop.lua  floatloop.spt  intloop.lua  intloop.spt  listsum.lua  listsum.spt  mapsum.lua  mapsum.spt  run.sh
new_spt/examples/: demo.c  run_source.c
new_spt/include/: spt.h
new_spt/include/spt/: conf.h  mem.h  object.h  opcodes.h  state.h  value.h
new_spt/src/: api.c  codegen.c  compiler.h  lexer.c  mem.c  object.c  parser.c  state.c  vm.c
new_spt/src/jit/: jit.h  jit_mir.c  jit_rt.h
spt-lang/: .clang-tidy  .gitignore  CMakeLists.txt  HANDOFF.md  LangLexer.g4  LangParser.g4  README.md  change.md  md.md
spt-lang/.github/workflows/: compile.yml  msys2_mingw.yml
spt-lang/bench/: for_iter_baseline.spt  for_iter_compare.spt  run_bench.ps1
spt-lang/bench/results/: baseline.md  compare.md
spt-lang/cmake/: sptConfig.cmake.in
spt-lang/docs/jit/: JIT_DEV_NOTES.md  JIT_ROADMAP.md  remove_change4.patch  修复报告.md
spt-lang/scripts/: gen_coverage.ps1  jit_difftest.sh  jit_fuzz.py  jit_fuzz_float_ifconv.py  jit_fuzz_helpers.py
spt-lang/src/: lapi.c  lauxlib.c  lauxlib.h  lbaselib.c  lcorolib.c  lctype.h  ldblib.c  ldo.c  lgc.c  linit.c  liolib.c  ljumptab.h  lmathlib.c  loslib.c  lparser.h  lstate.c  lstate.h  lstrlib.c  ltablib.c  ltests.c  ltm.h  lua.h  lualib.h  lvm.c  lvm.h  spt.h  spt_arena.c  spt_arena.h  spt_ast.c  spt_ast.h  spt_codegen.c  spt_codegen.h  spt_diag.c  spt_diag.h  spt_frontend.c  spt_frontend.h  spt_jit.c  spt_jit.h  spt_jit_asm.c  spt_jit_asm.h  (+12 more)
spt-lang/src/codegen/: ast_codegen.h
spt-lang/src/frontend/: loadast.h  spt_ast.h  spt_lsp_bridge.h
spt-lang/src/jit/: JIT_DEV_NOTES.md  JIT_ROADMAP.md  spt_jit.c  spt_jit.h  spt_jit_asm.c  spt_jit_asm.h  spt_jit_codegen.c  spt_jit_internal.h  spt_jit_ir.c  spt_jit_ir.h
spt-lang/src/vm/: lauxlib.c  lbaselib.c  lcode.c  lcorolib.c  lmathlib.c  lstring.c  lstrlib.c  ltable.c  lvm.c  lvm.h  lzio.c
spt-lang/test/: bench_int.spt  export_empty.spt  export_multiple.spt  test_import_multiple.spt
spt-lang/test/01_statements/assignment/: index_assign.spt
spt-lang/test/01_statements/block/: comments.spt  variable_shadowing.spt
spt-lang/test/01_statements/break_continue/: break_first.spt  continue_in_for.spt  continue_in_while.spt
spt-lang/test/01_statements/defer_stmt/: defer_basic.spt  defer_order.spt  defer_with_return.spt
spt-lang/test/01_statements/return_stmt/: return_multi_path.spt
spt-lang/test/12_coroutine/: basic_coroutine.spt  coroutine_param.spt  coroutine_running_yieldable_close.spt  coroutine_status.spt  coroutine_wrap.spt  producer_consumer.spt  yield_multi.spt
spt-lang/test/13_metatable/: metatable_call.spt  metatable_gc.spt  metatable_newindex.spt  metatable_weak.spt
spt-lang/test/14_stress/: deep_recursion.spt  large_list.spt  long_loop_leak.spt  numeric_boundary.spt  stack_overflow.spt  string_boundary.spt  tail_call.spt
spt-lang/test/vm_bug_verify/: _asan_edge_cases.spt  _asan_fuzz.spt  b1_call_metamethod.spt  b3_dofile_return.spt  b4_yield_return.spt  b5_gc_movearray.spt
spt-lang/tests/: TestCApi.c  TestDeclare.c  TestIter.c
spt-lang/tools/ast_dump/: spt_ast_dump.c
spt-lsp/server/: .clang-format  CMakeLists.txt  README.md  ROADMAP.md  run_tests.sh
spt-lsp/server/src/: main.c
spt-lsp/server/test/: test_crash_semtok.c  test_cross_import.c  test_diagnostics.c  test_documents.c  test_features.c  test_format.c  test_incomplete.c  test_manual_def.c  test_phase3.c  test_phase4.c  test_phase5.c  test_phase6.c  test_rpc.c  test_server.c  test_type_infer.c  test_workspace.c
spt-lsp/tests/: CMakeLists.txt  action_chain.h  test_ast_builder.cpp  test_behavior_chain.cpp  test_behavior_chain2.cpp  test_framework.h  test_main.cpp  test_parser.cpp
sptxx/: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  LangLexer.g4  LangParser.g4  README.md  change.md  test_call_metamethod.cpp  test_comprehensive.cpp  test_containers_advanced.cpp  test_debug.cpp  test_debug2.cpp  test_function_persistence.cpp  test_global_persistence.cpp  test_map_validation.cpp  test_optional.cpp  test_ref.cpp  test_registry_ref.cpp  test_tforcall.cpp  test_usertype.cpp  test_usertype_debug.cpp  test_usertype_debug2.cpp  test_usertype_debug3.cpp  test_usertype_minimal.cpp  test_usertype_trace.cpp
sptxx/include/: sptxx.hpp
sptxx/include/sptxx/: containers.hpp  coroutine.hpp  error.hpp  function.hpp  list.hpp  map.hpp  stack.hpp  state.hpp  table_proxy.hpp  usertype.hpp  variadic.hpp  variant.hpp
sptxx/tests/: Test.h  TestCApi.c  TestDeclare.c  test_basic.cpp  test_call_metamethod.cpp  test_containers.cpp  test_containers_advanced.cpp  test_coroutine.cpp  test_coroutine_multival.cpp  test_coroutine_wrap.cpp  test_edge_containers.cpp  test_edge_inheritance.cpp  test_edge_table_proxy.cpp  test_edge_usertype.cpp  test_edge_variadic.cpp  test_edge_variant.cpp  test_exception_bridge.cpp  test_function_multireturn.cpp  test_global_scope.cpp  test_inheritance.cpp  test_list_bounds.cpp  test_list_validation.cpp  test_lua_function.cpp  test_map_clear.cpp  test_map_iterator.cpp  test_map_validation.cpp  test_multireturn.cpp  test_object_list.cpp  test_object_map.cpp  test_overload.cpp  test_ownership.cpp  test_registry_ref.cpp  test_simple.cpp  test_stack_extended.cpp  test_state_extended.cpp  test_static_capture_bug.cpp  test_static_members.cpp  test_syntax.cpp  test_table_proxy.cpp  test_tforcall.cpp  (+6 more)
tests/: CMakeLists.txt  Test.h  TestBasics.h  TestBenchmarks.h  TestBuiltins.h  TestCApi.c  TestClasses.h  TestCompiler.h  TestControlFlow.h  TestFunctions.h  TestListMap.h  TestModules.h  TestOperatorOverload.h  TestRunner.h  TestSyntax.h  testRun.cpp  test_all.cpp  test_benchmark.cpp  test_map.cpp  util_os.cpp  util_os.h
(+795 files in other folders)
